--- a/stats-glow-mind/src/app/components/stats/standings/standings.component.css
+++ b/stats-glow-mind/src/app/components/stats/standings/standings.component.css
@@ -15,7 +15,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin: 1%
+  margin: 1%;
 }
 h2 {
   font-size: 26px;
