--- a/stats-glow-mind/src/app/components/teams/teams.component.css
+++ b/stats-glow-mind/src/app/components/teams/teams.component.css
@@ -38,6 +38,9 @@ h2 {
     margin-left: 15%;
     margin-right: 15%;
 }
+strong {
+    color: #FE5B3B;
+}
 
 /* Estilos Cards Material */
 .card {
@@ -70,4 +73,21 @@ mat-card-actions {
 }
 mat-card-actions button {
     margin: 5%;
+}
+
+/* Media query para pantallas pequeñas */
+@media only screen and (max-width: 600px) {
+    .card {
+        font-size: 12px;
+    }
+    h1{
+        font-size: 18px;
+    }
+    h2, .card-header {
+        font-size: 16px;
+    }
+    .conference, h2 {
+        margin-bottom: 5%;
+        margin-top: 5%;
+    }
 }
