--- a/stats-glow-mind/src/app/components/main/main.component.css
+++ b/stats-glow-mind/src/app/components/main/main.component.css
@@ -36,17 +36,25 @@
     font-size: 12px;
     color: #002649;
     font-family: 'Zen Dots', sans-serif;
+    background-color: white;
 }
 
 /* Estilos Descripción */
 .description {
-    display: flex;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     margin-bottom: 5%;
 }
+.slogan {
+    margin-right: 10%;
+    margin-left: 10%;
+}
 .logo {
-    width: 10%;
+    width: 15%;
     height: auto;
+    margin-bottom: 2%;
 }
 .name {
     font-family: 'Zen Dots', sans-serif;
@@ -83,7 +91,7 @@ button {
         font-size: 18px;
     }
     .logo {
-        width: 15%;
+        width: 20%;
     }
 }
 /* Media query para pantallas 1000px */
@@ -98,7 +106,7 @@ button {
         margin: 5%;
     }
     .logo {
-        width: 20%;
+        width: 25%;
     }
 }
 /* Media query para pantallas 800px */
@@ -107,7 +115,7 @@ button {
         width: 40%;
     }
     .logo {
-        width: 25%;
+        width: 30%;
     }
 }
 /* Media query para pantallas 600px */
@@ -116,6 +124,6 @@ button {
         width: 65%;
     }
     .logo {
-        width: 30%;
+        width: 35%;
     }
 }
