footer y algunos cambios

--- a/stats-glow-mind/src/app/app.component.html
+++ b/stats-glow-mind/src/app/app.component.html
@@ -26,6 +26,7 @@
   </div>
 </div>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
 
 <!-- Menú NBA -->
 <mat-menu #nba="matMenu" color="accent">
