--- a/stats-glow-mind/src/app/components/teams/team-players/team-players.component.html
+++ b/stats-glow-mind/src/app/components/teams/team-players/team-players.component.html
@@ -8,6 +8,9 @@
                 <h1>{{teamName}}</h1>
             </div>
         </div>
+        <div class="btn-stats">
+            <button mat-flat-button color="primary" [routerLink]="['/teams', teamNickname]" >ESTADÍSTICAS</button>
+        </div>
         <div class="table-players">
             <div class="name-stats">
                 <h2>Jugadores</h2>
