--- a/stats-glow-mind/src/app/components/main/main.component.css
+++ b/stats-glow-mind/src/app/components/main/main.component.css
@@ -71,7 +71,7 @@
 }
 .card-content {
     margin-top: 5%;
-    text-align: center;
+    text-align: left;
 }
 mat-card-title {
     font-size: 22px;
@@ -108,6 +108,9 @@ button {
     .logo {
         width: 25%;
     }
+    .user-btn {
+        font-size: 10px;
+    }
 }
 /* Media query para pantallas 800px */
 @media only screen and (max-width: 800px) {
@@ -125,5 +128,8 @@ button {
     }
     .logo {
         width: 35%;
+    }
+    .user-btn {
+        font-size: 8px;
     }
 }
