--- a/stats-glow-mind/src/app/components/stats/leaders/leaders.component.css
+++ b/stats-glow-mind/src/app/components/stats/leaders/leaders.component.css
@@ -5,6 +5,7 @@
     padding-right: 2.5%;
     padding-bottom: 2.5%;
     background-color: #f5f5f5;
+    padding-bottom: 10%;
 }
 .leaders-table {
     width: 100%;
