--- a/stats-glow-mind/src/app/components/stats/playoffs/playoffs.component.css
+++ b/stats-glow-mind/src/app/components/stats/playoffs/playoffs.component.css
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     padding: 1.5%;
     background-color: #f5f5f5;
+    padding-bottom: 10%;
 }
 .playoffs-container {
     width: auto;
