--- a/stats-glow-mind/src/app/components/stats/standings/standings.component.css
+++ b/stats-glow-mind/src/app/components/stats/standings/standings.component.css
@@ -6,6 +6,7 @@
   padding-right: 2.5%;
   padding-bottom: 2.5%;
   background-color: #f5f5f5;
+  padding-bottom: 10%;
 }
 .conference-table {
   text-align: center;
