--- a/stats-glow-mind/src/app/components/teams/team-players/team-players.component.css
+++ b/stats-glow-mind/src/app/components/teams/team-players/team-players.component.css
@@ -18,6 +18,10 @@
 .logo {
     width: 10%;
 }
+.btn-stats {
+    text-align: left;
+    margin-left: 5%;
+}
 h1 {
     font-size: 36px;
     font-family: 'Zen Dots', sans-serif;
@@ -62,6 +66,11 @@ th, td {
     .logo {
         width: 15%;
     }
+    button {
+        font-size: 14px;
+        width: auto;
+        height: 10%;
+    }
 }
 
 /* Media query para pantallas pequeñas */
@@ -74,6 +83,11 @@ th, td {
     }
     .logo {
         width: 20%;
+    }
+    button {
+        font-size: 10px;
+        width: 15%;
+        height: 5%;
     }
 }
 
