--- a/stats-glow-mind/src/styles.css
+++ b/stats-glow-mind/src/styles.css
@@ -12,6 +12,7 @@ body {
     justify-content: center;
     height: auto;
     background-color: #f5f5f5;
+    padding-bottom: 10%;
 }
 /*
 .header {
