--- a/stats-glow-mind/src/app/components/stats/leaders/leaders.component.css
+++ b/stats-glow-mind/src/app/components/stats/leaders/leaders.component.css
@@ -1,20 +1,18 @@
 /* Estilos Líderes */
 .leaders {
     display: flex;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
-    padding-bottom: 2.5%;
+    flex-wrap: wrap;
+    padding: 0% 2.5% 2.5% 2.5%;
     background-color: #f5f5f5;
     padding-bottom: 10%;
 }
 .leaders-table {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     text-align: center;
     padding: 1.5%;
     flex: 1; 
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 1%;
 }
 h2 {
@@ -22,6 +20,12 @@ h2 {
     font-family: 'Zen Dots', sans-serif;
     color: #002649;
     margin-bottom: 2.5%;
+}
+.title {
+    width: 100%;
+}
+.paginator {
+    width: 100%;
 }
 
 /* Estilos Material Tabla */
