--- a/stats-glow-mind/src/app/components/stats/playoffs/playoffs.component.css
+++ b/stats-glow-mind/src/app/components/stats/playoffs/playoffs.component.css
@@ -2,12 +2,12 @@
 .playoffs {
     display: flex;
     flex-wrap: wrap;
-    padding: 1.5%;
+    padding: 2.5%;
     background-color: #f5f5f5;
     padding-bottom: 10%;
 }
 .playoffs-container {
-    width: auto;
+    width: 100%;
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
