--- a/stats-glow-mind/src/app/components/stats/standings/standings.component.css
+++ b/stats-glow-mind/src/app/components/stats/standings/standings.component.css
@@ -2,9 +2,7 @@
 .standings {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
-  padding-bottom: 2.5%;
+  padding: 1.5% 2.5% 2.5% 2.5%;
   background-color: #f5f5f5;
   padding-bottom: 10%;
 }
@@ -37,7 +35,7 @@ th, td {
   padding: 1%;
   text-align: center;
   border-bottom: 1px solid #ddd;
-  width: 10%;
+  width: 1%;
 }
 .team {
   text-align: left;
@@ -57,5 +55,8 @@ img {
   }
   h2{
     font-size: 16px;
+  }
+  .conference-table {
+    width: 100%;
   }
 }
