componente análisis de jugadores

--- a/stats-glow-mind/src/app/app.component.html
+++ b/stats-glow-mind/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="menu">
       <button class="button_menu" [matMenuTriggerFor]="nba">NBA</button>
       <button class="button_menu" [matMenuTriggerFor]="equipos">EQUIPOS</button>
-      <button class="button_menu" routerLink="/stats">ANÁLISIS</button>
+      <button class="button_menu" routerLink="/analysis">ANÁLISIS</button>
       <button class="button_menu" routerLink="/stats">PREDICCIONES</button>
     </div>
   </div>
