--- a/stats-glow-mind/src/app/components/stats/playoffs/playoffs.component.css
+++ b/stats-glow-mind/src/app/components/stats/playoffs/playoffs.component.css
@@ -55,6 +55,9 @@ h2 {
     color: white;
     text-align: center;
 }
+.logo {
+    width: 10%;
+}
 .rank {
     font-size: 20px;
     margin-left: auto;
