--- a/stats-glow-mind/src/app/components/analysis/analysis.component.html
+++ b/stats-glow-mind/src/app/components/analysis/analysis.component.html
@@ -3,10 +3,52 @@
         <div class="title">
             <h2>Análisis de Jugadores</h2>
         </div>
+        <div class="featured-players">
+            <mat-card class="card">
+                <mat-card-header>
+                    <div mat-card-avatar class="avatar"><img class="headshot" [src]="lukaDoncic[3]" alt="Luka Doncic"></div>
+                    <mat-card-title>{{lukaDoncic[1]}}</mat-card-title>
+                    <mat-card-subtitle>{{lukaDoncic[2]}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-actions>
+                    <button mat-flat-button color="accent" [routerLink]="['/analysis/', 'player:' + lukaDoncic[0]]">ANÁLISIS</button>
+                </mat-card-actions>
+            </mat-card>
+            <mat-card class="card">
+                <mat-card-header>
+                    <div mat-card-avatar class="avatar"><img class="headshot" [src]="nikolaJocic[3]" alt="Luka Doncic"></div>
+                    <mat-card-title>{{nikolaJocic[1]}}</mat-card-title>
+                    <mat-card-subtitle>{{nikolaJocic[2]}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-actions>
+                    <button mat-flat-button color="accent" [routerLink]="['/analysis/', 'player:' + nikolaJocic[0]]">ANÁLISIS</button>
+                </mat-card-actions>
+            </mat-card>
+            <mat-card class="card">
+                <mat-card-header>
+                    <div mat-card-avatar class="avatar"><img class="headshot" [src]="shai[3]" alt="Luka Doncic"></div>
+                    <mat-card-title>{{shai[1]}}</mat-card-title>
+                    <mat-card-subtitle>{{shai[2]}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-actions>
+                    <button mat-flat-button color="accent" [routerLink]="['/analysis/', 'player:' + shai[0]]">ANÁLISIS</button>
+                </mat-card-actions>
+            </mat-card>
+            <mat-card class="card">
+                <mat-card-header>
+                    <div mat-card-avatar class="avatar"><img class="headshot" [src]="giannis[3]" alt="Luka Doncic"></div>
+                    <mat-card-title>{{giannis[1]}}</mat-card-title>
+                    <mat-card-subtitle>{{giannis[2]}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-actions>
+                    <button mat-flat-button color="accent" [routerLink]="['/analysis/', 'player:' + giannis[0]]">ANÁLISIS</button>
+                </mat-card-actions>
+            </mat-card>
+        </div>
         <div class="analysis-container">
-            <mat-form-field color="accent">
+            <mat-form-field>
                 <mat-label>Buscador: </mat-label>
-                <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Luka Doncic" #input>
+                <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Doncic" #input>
             </mat-form-field>
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                 <ng-container matColumnDef="ID">
@@ -34,10 +76,10 @@
                     <td mat-cell *matCellDef="let player">{{ getCodeTeam(player.idTeam) }}</td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns" [routerLink]="['/analysis/', 'player:' + row.id]"></tr>
             </table>
             <div class="paginator">
-                <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 50, 100]" aria-label="Select page of players"></mat-paginator>
+                <mat-paginator [pageSize]="25" [pageSizeOptions]="[5, 10, 25, 50, 100]" aria-label="Select page of players"></mat-paginator>
             </div>
         </div>
     </div>
