--- a/stats-glow-mind/src/app/components/main/main.component.html
+++ b/stats-glow-mind/src/app/components/main/main.component.html
@@ -59,6 +59,7 @@
         <div class="intro">
             <div class="main-card">
                 <mat-card class="card-main" routerLink="/stats">
+                    <span> </span>
                     <img mat-card-image class="logo" src="../assets/images/icons/hoop.png" alt="Basketball">
                     <mat-card-header>
                         <mat-card-title>NBA</mat-card-title>
